--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "react-router-dom": "5.0.1",
     "react-redux": "^7.1.3",
+    "react-router-dom": "5.0.1",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
