--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "5.0.1",
     "react-select": "3.0.8",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
