--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "bootstrap": "^4.3.1",
     "history": "^4.10.1",
     "jquery": "^3.4.1",
-    "react": "^16.11.0",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-router-dom": "5.0.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
     "react-select": "3.0.8",
-    "react-scripts": "3.2.0",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
