--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+##########################
+## IntelliJ
+##########################
+*.iml
+.idea/
+*.ipr
+*.iws
+out/
+.idea_modules/
+
 # dependencies
 /node_modules
 /.pnp
